tests/paczka1/fuzzy1/15449638.err
Error in line 1: tUuzmc8 S121 71,7
Error in line 4: C6NbKF S714 657,5
Error in line 17: C6NbKF S728 19,47
Error in line 19: aX5lxA A622 30,9
Error in line 25: tUuzmc8 S728 61,1
Error in line 20: aX5lxA S121 25,2
Error in line 38: 3aaUSVkB S728 82,7
